2011-01-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/betaradio.vala: Set default icon.
	* po/zh_TW.po,
	src/betaradio.vala: Set tooltip text.
	* data/betaradio.desktop.in,
	man/betaradio.1: Adjust comment and description.
	* debian/README,
	debian/changelog,
	debian/control,
	debian/rules,
	debian/source/format,
	mkdeb.sh: Polish for Debian package.
	* debian/control,
	debian/source/format: Fix lintian warning and error.
	* mkdeb.sh: Polish script.
	* po/zh_TW.po: Update po.

2011-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/betaradio.c,
	src/gstplay.c,
	src/gstplay.h,
	src/json_cat.c,
	src/json_cat.h: Remove deprecated source codes.
	* Makefile.am,
	autogen.sh,
	configure.ac,
	po/POTFILES.in,
	po/zh_TW.po,
	src/Makefile.am,
	src/betaradio.vala,
	vapi/Makefile.am,
	vapi/config.vapi: Deploy Vala program and gettextize.
	* src/betaradio.c: Remove unneeded source codes.
	* src/betaradio.vala,
	src/json_soup.vala: Follow function naming rule of Vala.

2010-12-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/json_soup.vala: Reimplement JsonSoup component by Vala.
	* src/gst_player.vala: Reimplement GstPlayer component by Vala.
	* src/betaradio.vala: Reimplement BetaRadio component by Vala.
	* src/gst_player.vala: Reduce unneeded inheritance.
	* src/json_soup.vala: Fix array indexing bug.


2010-12-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/academic.json: Add THBS.
	* utils/academic.json: Add OnlyMayDay.

2010-11-19  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/academic.json,
	utils/list.json,
	utils/ptt.json: Add Pinewave Radio.

2010-10-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	debian/changelog: 'debian' folder should not be included in release
	tarball but can be maintained under VCS.
	* debian/README,
	debian/changelog,
	debian/control,
	debian/copyright,
	debian/source/format,